<resources>
    <string name="app_name">QuizzApp</string>
    <string name="input_hint">შეიყვანე სახელი</string>
    <string name="start_headline">ჩემი პირველი ქვიზი</string>
    <string name="greeting_text">გამარჯობა, %1$s</string>
    <string name="select_subject">აირჩიე საგანი</string>
    <string name="detail">დეტალურად</string>
    <string name="start_quiz">ქვიზის დაწყება</string>
    <string name="points">დაგროვილი ქულები</string>
    <string name="no_points">🧐\nსამწუხაროდ,\nქულები ჯერ არ გაქვს დაგროვილი.</string>
    <string name="no_internet"> 🥺 სამწუხაროდ ვერ მოხერხდა ინტერნეტთან კავშირი</string>
    <string name="sad_emoji"> 🥺 </string>
    <string name="no_points_collected"> სამწუხაროდ თქვენ დააგროვეთ %1$d ქულა</string>
    <string name="dialog_question">ნამდვილად გსურს ქვიზის შეწყვეტა?</string>
    <string name="dialog_log_out_question">ნამდვილად გსურს გასვლა?</string>
    <string name="close">დახურვა</string>
    <string name="collected_points">შენ დააგროვე  %1$d ქულა</string>
    <string name="gpa">GPA -&#160;</string>
    <string name="congrats"> 🎉\nგილოცავ!</string>
    <string name="incorrect_input">"არავალიდური სახელი"!</string>
    <string name="next">შემდეგი</string>
    <string name="finish">დასრულება</string>
    <string name="current_point">მიმდინარე ქულა:</string>
    <string name="plus_one">+1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>