<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <com.space.quizzapp.presentation.custom_view.StartBackgroundCustomView
        android:id="@+id/startBackgroundCustomView"
        android:layout_width="match_parent"
        app:layout_constraintHeight_percent="0.55"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/illustrationImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:src="@drawable/ic_man"
        app:layout_constraintBottom_toBottomOf="@+id/startBackgroundCustomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/headlineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_56dp"
        android:text="@string/start_headline"
        style="@style/BigMyriadGeo_Normal_white"
        app:layout_constraintBottom_toTopOf="@+id/illustrationImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        style="@style/smallMyriadGeo_Normal_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:background="@drawable/bkg_input"
        android:hint="@string/input_hint"
        android:inputType="textPersonName"
        android:minHeight="@dimen/dimen_48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startBackgroundCustomView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        style="@style/smallMyriadGeo_Normal_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_75dp"
        android:backgroundTint="@color/yellow_primary"
        android:text="@string/start_quiz"
        android:paddingHorizontal="@dimen/dimen_24dp"
        android:paddingVertical="@dimen/dimen_14dp"
        app:cornerRadius="@dimen/dimen_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>