<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_75dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:layout_marginStart="@dimen/dimen_15dp"
        app:cardBackgroundColor="@color/blue_secondary_default"
        app:cardCornerRadius="@dimen/dimen_30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetingTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/detailTextView"
                style="@style/smallMyriadGeo_Normal_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:text="@string/detail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/detailImageButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/detailImageButton"
                android:layout_width="@dimen/dimen_14dp"
                android:layout_height="@dimen/dimen_10dp"
                android:layout_margin="@dimen/dimen_10dp"
                android:src="@drawable/ic_next_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="@dimen/dimen_82dp"
                android:layout_height="@dimen/dimen_35dp"
                tools:text="GPA-4.1"
                android:padding="@dimen/dimen_5dp"
                android:textAlignment="center"
                style="@style/mediumMyriadGeo_Normal_white"
                app:cardCornerRadius="@dimen/dimen_15dp"
                android:background="@color/blue_secondary_light"
                android:layout_marginStart="@dimen/dimen_15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/greetingTextView"
        style="@style/mediumMyriadGeo_Normal_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_text"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dimen_15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_500dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        tools:layout_editor_absoluteY="170dp"
        tools:listitem="@layout/subject_layout_item" />

    <TextView
        android:id="@+id/textView2"
        style="@style/mediumMyriadGeo_Normal_black"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:text="@string/select_subject"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homeRecyclerView"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/logOutImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logOutImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:src="@drawable/ic_log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>